--- a/package.json
+++ b/package.json
@@ -3,20 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "@mantine/charts": "^7.15.2",
+    "@mantine/core": "^7.15.2",
+    "@mantine/dates": "^7.15.2",
+    "@mantine/form": "^7.15.2",
+    "@mantine/hooks": "^7.15.2",
+    "@mantine/modals": "^7.15.2",
+    "@mantine/notifications": "^7.15.2",
+    "@tabler/icons-react": "^3.26.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "next": "15.1.3",
+    "next-auth": "^4.24.11",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.3",
+    "recharts": "^2.15.0",
+    "workbox-sw": "^7.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/node": "^20.17.11",
+    "@types/react": "^18.0.2",
+    "@types/react-dom": "^18",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5.7.2"
   }
 }
